src/objects/Drip_Event__c.object
<CustomObject>
    <description>The drip send event that will trigger and record the email sends</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <inlineHelpText>Campaign for this drip event</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Drip Events</relationshipLabel>
        <relationshipName>R00NR0000000Ui7mMAC</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Contact this email goes to</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Drip Events</relationshipLabel>
        <relationshipName>R00NR0000000Ui7hMAC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <inlineHelpText>Name of the email template for this step</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <label>Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Not_Sent__c</fullName>
        <formula>IF(ISNULL( Completed_Date__c ),&quot;Not Sent&quot;,&quot;Sent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent/Not Sent</label>
        <type>Text</type>
    </fields>
    <label>Drip Event</label>
    <nameField>
        <displayFormat>DripEvent-{000000}</displayFormat>
        <label>Drip Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drip Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>